--- a/index.html
+++ b/index.html
@@ -7,53 +7,97 @@
     .exp3{visibility: hidden;}
 </style>
 </head>
-<h1 style="color:blue;">Scientifically Proven Facts</h1>
 <script>
+    var hidden = false;
     function unhide() {
     var hid = document.getElementsByClassName("exp");
     // Emulates jQuery $(element).is(':hidden');
-    if(hid[0].offsetWidth > 0 && hid[0].offsetHeight > 0) {
+    if (hidden == false)
+    {
+        if(hid[0].offsetWidth > 0 && hid[0].offsetHeight > 0) {
         hid[0].style.visibility = "visible";
+        }
+        hidden = true;
     }
+    else
+    {
+        if(hid[0].offsetWidth > 0 && hid[0].offsetHeight > 0) {
+        hid[0].style.visibility = "hidden";
+        }
+        hidden = false;
+    }
+    console.log("Button 1 clicked");
 }
 </script>
 
 <script>
+  var hidden = false;
     function unhide2() {
     var hid = document.getElementsByClassName("exp2");
     // Emulates jQuery $(element).is(':hidden');
-    if(hid[0].offsetWidth > 0 && hid[0].offsetHeight > 0) {
+    if (hidden == false)
+    {
+        if(hid[0].offsetWidth > 0 && hid[0].offsetHeight > 0) {
         hid[0].style.visibility = "visible";
+        }
+        hidden = true;
     }
+    else
+    {
+        if(hid[0].offsetWidth > 0 && hid[0].offsetHeight > 0) {
+        hid[0].style.visibility = "hidden";
+        }
+        hidden = false;
+    }
+console.log("Button 2 clicked");
 }
 </script>
 
 <script>
+    var hidden = false;
     function unhide3() {
     var hid = document.getElementsByClassName("exp3");
     // Emulates jQuery $(element).is(':hidden');
-    if(hid[0].offsetWidth > 0 && hid[0].offsetHeight > 0) {
+    if (hidden == false)
+    {
+        if(hid[0].offsetWidth > 0 && hid[0].offsetHeight > 0) {
         hid[0].style.visibility = "visible";
+        }
+        hidden = true;
     }
+    else
+    {
+        if(hid[0].offsetWidth > 0 && hid[0].offsetHeight > 0) {
+        hid[0].style.visibility = "hidden";
+        }
+        hidden = false;
+    }
+    
+console.log("Button 3 clicked");
 }
 </script>
 
+<center>
+<h1 style="color:blue;">Scientifically Proven Facts</h1>
 <body>
     <body style="background-color:rgba(000, 000, 000, 0);"></body>
-<button onclick="unhide()">Show Answer</button>
-<div class="exp">
-    <p>Yul likes big black men</p>
-</div>
+    <button onclick="unhide()">Show/Hide Answer</button>
+    <div class="exp">
+        <p>Yul likes big black men</p>
+    </div>
 
-<button onclick="unhide2()">Show Answer</button>
-<div class="exp2">
-    <p>Yul likes little kids</p>
-</div>
+    <button onclick="unhide2()">Show/Hide Answer</button>
+    <div class="exp2">
+        <p>Yul likes little kids</p>
+    </div>
 
-<button onclick="unhide3()">Show Answer</button>
-<div class="exp3">
-    <p>Yul likes gay men</p>
-</div>
+    <button onclick="unhide3()">Show/ hide Answer</button>
+    <div class="exp3">
+        <p>Yul likes gay men</p>
+    </div>
+    <p style="font-size:75%;">Copyright 2022-2022 by Cool Kids Project .Inc. All Rights Reserved.</p>
+    <p style="font-size:75%;">Powered by GitHub</p>
+</center>
 
 </body>
 </html>
