--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ console.log("Button 3 clicked");
         <p>Yul likes little kids</p>
     </div>
 
-    <button onclick="unhide3()">Show/ hide Answer</button>
+    <button onclick="unhide3()">Show/Hide Answer</button>
     <div class="exp3">
         <p>Yul likes gay men</p>
     </div>
