--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@ console.log("Button 3 clicked");
         <p>Yul likes gay men</p>
     </div>
     <p>‎</p>
-    <p style="font-size:75%;">Copyright 2022-2022 by Cool Kids Project .Inc. All Rights Reserved.</p>
+    <a href="https://termsofuse.lsrt.workers.dev">Terms of Use</a>
+    <p>All info was gained from the <strong>Gay Pride Incorperation</strong> and was verified by personel</p>
+    <p style="font-size:75%;">© Copyright 2022-2022 by Cool Kids Project .Inc. All Rights Reserved.</p>
     <p style="font-size:75%;">Powered by GitHub</p>
 </center>
 
