--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ console.log("Button 3 clicked");
     </div>
     <p>‎</p>
     <a href="https://termsofuse.lsrt.workers.dev">Terms of Use</a>
-    <p>‎</p>
+    <pstyle="font-size:10%;">‎</p>
     <a href="https://tos.lsrt.workers.dev">Terms of Service</a>
     <p>All info was gained from the <strong>Gay Pride Incorperation</strong> and was verified by personel</p>
     <p style="font-size:75%;">© Copyright 2022-2022 by Cool Kids Project .Inc. All Rights Reserved.</p>
