--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ console.log("Button 3 clicked");
     <a href="https://termsofuse.lsrt.workers.dev">Terms of Use</a>
     <pstyle="font-size:10%;">‎</p>
     <a href="https://tos.lsrt.workers.dev">Terms of Service</a>
-    <p>All info was gained from the <strong>Gay Pride Incorperation</strong> and was verified by personel</p>
+    <p>All info was gained from the <strong>Gay Pride Incorperation</strong> and was verified by personnel</p>
     <p style="font-size:75%;">© Copyright 2022-2022 by Cool Kids Project .Inc. All Rights Reserved.</p>
     <p style="font-size:75%;">Powered by GitHub</p>
 </center>
