--- a/index.html
+++ b/index.html
@@ -124,12 +124,13 @@ console.log("Button 4 clicked");
         <p>Yul likes gay men</p>
     </div>
 
-    
     <button onclick="unhide4()">Show/Hide Answer</button>
     <div class="exp4">
         <p>Ryden gey</p>
         <p>Also kinda sus (sometimes)</p>
     </div>
+
+    <button>Click for virus</button>
 
 
     <p>‎</p>
