--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ console.log("Button 4 clicked");
 
     <button>Click for virus</button>
 
+    <a href="Untitled-1.html">untitled1.html</a>
 
     <p>‎</p>
     <a href="https://termsofuse.lsrt.workers.dev">Terms of Use</a>
