--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@ console.log("Button 4 clicked");
         <p>Also kinda sus (sometimes)</p>
     </div>
 
-    <button>Click for virus</button>
+    <a href="test.html">Click for virus</a>
 
-    <a href="Untitled-1.html">untitled1.html</a>
+    
 
     <p>‎</p>
     <a href="https://termsofuse.lsrt.workers.dev">Terms of Use</a>
