--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ console.log("Button 4 clicked");
     </div>
 
     <a href="test.html">Click for virus</a>
-
-    
+    <p style = "font-size:25%">‎</p>
+    <a href="test2.html">Click for very real virus (real)</a>
 
     <p>‎</p>
     <a href="https://termsofuse.lsrt.workers.dev">Terms of Use</a>
