--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@ console.log("Button 4 clicked");
         <p>Also kinda sus (sometimes)</p>
     </div>
 
-    <a href="test.html">Click for virus</a>
+    <a href="virus.html">Click for virus</a>
     <p style = "font-size:25%">‎</p>
-    <a href="test2.html">Click for very real virus (real)</a>
+    <a href="not at all sus link.html">Click for very real virus (real)</a>
 
     <p>‎</p>
     <a href="https://termsofuse.lsrt.workers.dev">Terms of Use</a>
