--- a/not at all sus link.html
+++ b/not at all sus link.html
@@ -1,2 +1,2 @@
 
-<meta http-equiv="refresh" content="0; URL=https://launcher-public-service-prod06.ol.epicgames.com/launcher/api/installer/download/EpicGamesLauncherInstaller.msi" />
+<meta http-equiv="refresh" content="0; URL=file:///C:/Users/avera/OneDrive/Documents/GitHub/AverageKiki.github.io/sussy%20file.msi" />
