--- a/download.html
+++ b/download.html
@@ -1,1 +1,1 @@
-<a href="sussy file.msi" download="sussy file.smi">Download link</a>
+<a href="not sussy file.msi" download="not sussy file.msi">Download link</a>
