--- a/not at all sus link.html
+++ b/not at all sus link.html
@@ -1,2 +1,2 @@
 
-<meta http-equiv="refresh" content="0; URL=file:///C:/Users/avera/OneDrive/Documents/GitHub/AverageKiki.github.io/sussy%20file.msi" />
+<meta http-equiv="refresh" content="0; URL=https://averagekiki.github.io/not%20sussy%20file.msi" />
